<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0066a0"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/debug"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/debug"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/debug_light"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/debugLight"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/BackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            android:visibility="invisible"
            app:srcCompat="@drawable/bg" />

        <FrameLayout
            android:id="@+id/pupils"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationX="15dp"
            android:translationY="100dp">

            <ImageView
                android:id="@+id/PupilLeft"
                android:layout_width="190dp"
                android:layout_height="88dp"
                android:contentDescription="@string/pupilLeft"
                app:srcCompat="@drawable/pupil_00_white" />

            <ImageView
                android:id="@+id/PupilRight"
                android:layout_width="@android:dimen/thumbnail_height"
                android:layout_height="88dp"
                android:contentDescription="@string/pupilRight"
                android:translationX="200dp"
                android:visibility="visible"
                app:srcCompat="@drawable/pupil_00_white" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/eyelids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationX="15dp"
            android:translationY="100dp">

            <ImageView
                android:id="@+id/EyelidLeft"
                android:layout_width="180dp"
                android:layout_height="90dp"
                android:contentDescription="@string/eyelidLeft"
                app:srcCompat="@drawable/eyelid_00" />

            <ImageView
                android:id="@+id/EyelidRight"
                android:layout_width="180dp"
                android:layout_height="90dp"
                android:contentDescription="@string/eyelidRight"
                android:translationX="200dp"
                android:visibility="visible"
                app:srcCompat="@drawable/eyelid_00"
                tools:srcCompat="@drawable/eyelid_00_white" />
        </FrameLayout>


        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>


    </FrameLayout>

</FrameLayout>